@@ -1,4 +1,4 @@
-$NetBSD: CHANGES,v 1.10743 2005/08/01 09:49:39 jlam Exp $
+$NetBSD: CHANGES,v 1.10744 2005/08/01 10:27:59 cube Exp $
 
 Changes to the packages collection and infrastructure in 2005:
 
@@ -3492,3 +3492,4 @@ Changes to the packages collection and infrastructure in 2005:
 	Updated pkgtools/digest to 20050731 [agc 2005-07-31]
 	Added textproc/ezxml version 0.8.4 [agc 2005-07-31]
 	Updated databases/openldap to 2.2.27 [jlam 2005-08-01]
+	Updated misc/screen to 4.0.2nb2 [cube 2005-08-01]
